# sysagent

./: README.md  example.py  pyproject.toml  scrachpad.py  xapian_crash_course.py
sysagent/: db.py  main.py  search_mcp.py  server.py
sysagent/extractors/: __init__.py  common.py  csv.py  docx.py  html.py  ipynb.py  json.py  pdf.py  pptx.py  toml.py  xlsx.py  xml.py  yaml.py
tests/: test_db.py
